<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Health Care</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="repassword">Enter Security Hint</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="enterpassword">Enter Password</string>
    <string name="entersecurityhint">Re Enter Password</string>
    <string name="yourpassword">Your Password</string>
    <string name="getpassword">Get Password</string>
    <string name="showpassword">Show me password</string>
    <string name="securityhint">Security Hint </string>
    <string name="putsecurityhint">Enter Password Hint </string>
    <string name="dby">developed by harshal.jaspal@yahoo.com</string>
    <string name="intro">Welcome to the world of Smart Health Care Application</string>
    <string name="BMI">Body Mass Index</string>
    <string name="height">Please Enter Your Height</string>
    <string name="weight">Please Enter Your Weight</string>
    <string name="result">Your Result is</string>
    <string name="action_settings">Settings</string>
    <string name="hintWeigth">Enter Your Weigth(kg)</string>
    <string name="hintHeight">Enter Your Height(m)</string>
    <string name="txtClear">Clear</string>
    <string name="txtCalculate">Calculate BMI</string>
    <string name="txtExit">Exit</string>
    <string name="txtUnitSetting">Units:</string>
    <string name="spnrItemMetric">Metric (kilogram, meter)</string>
    <string name="spnrItemImperial">Imperial (lbs, feet)</string>
    <string name="txtSave">Save</string>
    <string name="txtCalcIdeal">Ideal Weight</string>
    <string name="start">Start</string>
    <string name="split">Split</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="lap">lap</string>
    <string name="recording_title"> Running Tracks</string>
    <string name="previous_trips">Saved Trips:</string>
    <string name="startNewTrip">Start Trip!</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="finishedButtonLabel">Finish</string>
    <string name="enterTripInfo">And add any comments about your trip here</string>
    <string name="promptPurpose">Select the main purpose of this trip</string>
    <string name="uploadProgressTitle">Sending----</string>
    <string name="uploadProgressMessage">Sending your trip.\n\nThanks for using Running Tracks!</string>
    <string name="str_btn_chart">Reason for running v/s Distance</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_trip">New Trip</string>
    <string name="start_trip_prompt">Press on the image to start tracking</string>

</resources>