<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/running_athlete"
                android:layout_width="170dip"
                android:layout_height="170dip"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/enterpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/running_athlete"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" >

            
            </EditText>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enterpassword"
                android:layout_marginTop="20dp"
                android:text="@string/Login"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forget_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_btn"
                android:layout_below="@+id/login_btn"
                android:layout_marginTop="27dp"
                android:text="Forget Password!"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_text_view"
                android:text="@string/register" 
                android:textStyle="bold"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>